Fixed: gitignore & catalog overflow & site css

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -214,7 +214,7 @@ div.product-notice{
     line-height: 14px;
     text-align: center;
     height: 55px;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 div.product-notice > p{
     margin-bottom: -1px;
